# acurite-thermometer

./: Cargo.toml  README.md  build-atmega328p.sh  flake.nix  flash-attiny85.sh  rust-toolchain.toml  shell.nix
.cargo/: config.toml
acurite-protocol/: Cargo.toml
acurite-protocol/src/: lib.rs  test.rs
acurite-thermometer/: Cargo.toml
acurite-thermometer/src/: i2c.rs  main.rs  radio.rs  watchdog.rs
avr-specs/: avr-atmega328p.json
src/: adc.rs  main.rs  power.rs  tmp102.rs
