[workspace]

members = [
    "acurite-protocol",
    "acurite-thermometer",
]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

# Undo optimization settings for tests that run on the build platform
[profile.test]
panic = "unwind"
lto = false
opt-level = 0